# chatbot-api

./: .env  .gitignore  README.md  pyproject.toml
app/: server.py  utils.py
app/api_generated/: crud.py  dependenies.py  routes.py  schemas.py
app/auth/: crud.py  database.py  dependencies.py  models.py  routes.py  schemas.py
app/chat_with_llm/: routes.py
app/chat_with_sql/: chain.py  dependencies.py  routes.py  schemas.py
app/chat_with_sql/history/: string@728b56b7-9b16-48d2-b08b-70e2df92d36e.txt  string@a43ba0a9-d6c6-4e4c-ac68-22e1a956d245.txt  string@a7fcc8ba-ceec-456e-a979-44240ac7aafd.txt  string@beaf8598-d2c5-4860-9177-0f21019dbcf1.txt  test.txt
app/chatbot/: chain.py  chain2.py  crud.py  dependencies.py  langserve_chain.py  routes.py  schemas.py
app/chatbot/history/: string@4416847b-3c94-48fd-9370-aebbee2b0afd.txt  string@65176975-fa8c-4697-a892-59450c7310db.txt  string@a025e71d-c3f7-41f7-894d-0d3638ce5033.txt  string@a7fcc8ba-ceec-456e-a979-44240ac7aafd.txt
app/chatbot/history/json/: string@65176975-fa8c-4697-a892-59450c7310db.json
app/chatbot/vector_store/: db.py  pgvector_service.py  vectorstore.py
app/chatbot/vector_store/docs_resources/: koreanUni.txt
app/file_upload/: crud.py  dependencies.py  file_upload.py  routes.py
app/file_upload/chroma_db/: chroma.sqlite3
app/file_upload/chroma_db/ssstrinddg@a025e71d-c3f7-41f7-894dff-0d3638ce5033_chroma_db/: chroma.sqlite3
app/file_upload/chroma_db/strinddg@a025e71d-c3f7-41f7-894dff-0d3638ce5033_chroma_db/: chroma.sqlite3
app/file_upload/chroma_db/string@02fe333b-1359-4d1a-b7ed-6172aa5e8e23_chroma_db/: chroma.sqlite3
app/file_upload/chroma_db/string@66059ad6-e4ad-41ab-80cf-a4de64c416e0_chroma_db/: chroma.sqlite3
app/file_upload/chroma_db/string@a025e71d-c3f7-41f7-894dff-0d3638ce5033_chroma_db/: chroma.sqlite3
app/file_upload/resources/: The Project Gutenberg eBook of Rome.txt
app/message_history/: dependencies.py
(+2 files in other folders)
